# jaspire-chat-completion

./: .gitignore  MANAGER_HANDOFF.md  QUICKSTART.md  README.md  chat.html  example_client.py  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
app/: cli.py  config.py
app/models/: chat.py
app/routes/: chat.py
app/services/: agent.py  chat.py  llm.py  memory.py  recommendations.py  tools.py  web_search.py
data/: conversations.db  conversations.db-shm  conversations.db-wal
