[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaspire-chat-api"
version = "2.1.0"
description = "OpenAI-compatible FastAPI chatbot with LangChain web search"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "JASPIRE" }
]
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.8,<3",
  "python-dotenv>=1.0.0",
  "httpx>=0.25,<1",
  "openai>=1.3.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "langgraph>=0.2.0",
  "ddgs>=0.9.0"
]

[project.scripts]
jaspire = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
